objects/ssot__AssessmentQuestionResponse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentId__c</fullName>
        <label>Assessment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionVersionId__c</fullName>
        <label>Assessment Question Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Question Response Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MultiselectResponseValueText__c</fullName>
        <label>Multiselect Response Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAsmtQuestionVersionId__c</fullName>
        <label>Parent Assessment Question Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RespondentTimezoneText__c</fullName>
        <label>Respondent Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseDataTypeText__c</fullName>
        <label>Response Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseText__c</fullName>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueBoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Value Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueCurrency__c</fullName>
        <label>Response Value Currency</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueDateTime__c</fullName>
        <label>Response Value Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueDate__c</fullName>
        <label>Response Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueDecimal__c</fullName>
        <label>Response Value Decimal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueInteger__c</fullName>
        <label>Response Value Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueText__c</fullName>
        <label>Response Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValueTime__c</fullName>
        <label>Response Value Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291272838_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionResponse_Assessmen_rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionResponse_Assessmen_rel</relationshipLabel>
        <relationshipName>rel_1720291272838_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291814367_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionResponse_Assessmen_rel</label>
        <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionResponse_Assessmen_rel</relationshipLabel>
        <relationshipName>rel_1720291814367_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291820096_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionResponse_ParentAsm_rel</label>
        <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionResponse_ParentAsm_rel</relationshipLabel>
        <relationshipName>rel_1720291820096_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>